--- a/test/css/style.css
+++ b/test/css/style.css
@@ -12,7 +12,7 @@ html,body{background-color:#76c4c6;}
 .sectionx{background-color:#76c4c6;}
 .sectionx:nth-of-type(2n){background-color:#ffffff;}
 .animate{transition:300ms linear all;}
-h4{color:white;}
+hss5{color:white;}
 p{color:#C3CAD9;}
 a{color:#373B44;}
 .fixed-action-btn ul{display:none;}
