--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@ h5.high::-moz-selection{background:#e67e22;}
 .redselect{}
 .redselect:hover{text-decoration:underline;}
 #dp{padding-top:20px;}
-html,body{background-color:#76c4c6;}
+html,body{background-color:#435f7b;}
 .headerimg{padding:0 50vh;}
 #section0{}
 .mainsection{
 	height: 100vh;
 }
-.sectionx{background-color:#76c4c6;}
+.sectionx{background-color:#373b50;}
 .sectionx:nth-of-type(2n){background-color:#ffffff;}
 .animate{transition:300ms linear all;}
 hss5{color:white;}
@@ -59,7 +59,7 @@ a{color:#373B44;}
 
 		width:100%;height:100%;
 		position:fixed;
-		background-color:#76c4c6;
+		background-color:#373b50;
 		-moz-user-select:none;
 		-webkit-user-select:none;
 		display:flex;
@@ -75,15 +75,15 @@ a{color:#373B44;}
 		#main{display:none;}
 
 		.themecolor {
-			background-color:#76c4c6 !important;
+			background-color:#373b50 !important;
 		}
 		.themecolordark {
-			background-color:#3899A2 !important;
+			background-color:#373b50 !important;
 		}
 		.waves-effect.waves-greendark .waves-ripple {
      /* The alpha value allows the text and background color
      of the button to still show through. */
-      background-color: #A3B13D;
+      background-color: #484e6e;
     }
 		html, body {
     max-width: 100% !important;
